--- a/pages/19734.html
+++ b/pages/19734.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9068/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9068/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -316,15 +316,15 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#section_Introduction'>Introduction</a></li>
-<li><a href='#section_Bertrands_postulate'>Bertrands postulate</a></li>
-<li><a href='#section_Proof_given_Goldbachs_conjecture'>Proof given Goldbachs conjecture</a></li>
+<li><a href='#section_Bertrand's_postulate'>Bertrand's postulate</a></li>
+<li><a href='#section_Proof_given_Goldbach's_conjecture'>Proof given Goldbach's conjecture</a></li>
 <li><a href='#section_References'>References</a></li>
 </ul>
 </div>
 
 <h2 id="section_Introduction">Introduction</h2>
 <p><em>Bertrand’s postulate</em>, first proven by analytic methods by Chebyshev in 1852, is one of the few simple facts providing precise bounds on the occurrence of primes.</p>
-<h2 id="section_Bertrands_postulate">Bertrands postulate</h2>
+<h2 id="section_Bertrand's_postulate">Bertrand's postulate</h2>
 <p>Given an integer <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">i \geq 1</annotation></semantics></math>, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">p_{i}</annotation></semantics></math> denote the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>i</mi> <mi>th</mi></msup></mrow><annotation encoding="application/x-tex">i^{th}</annotation></semantics></math> prime. <em>Bertrand’s postulate</em> is the following.</p>
 
 <p>
@@ -344,7 +344,7 @@ margin-left: 0em;
 <p></p>
 </div>
 </p>
-<h2 id="section_Proof_given_Goldbachs_conjecture">Proof given Goldbachs conjecture</h2>
+<h2 id="section_Proof_given_Goldbach's_conjecture">Proof given Goldbach's conjecture</h2>
 <p>Around 2005, it was noticed by Henry J. Ricardo and Yoshihiro Tanaka that Bertrand’s postulate follows from the Goldbach conjecture. We record the proof (of the formulation in Remark <a class="maruku-ref" href="#RemarkAlternativeFormulations"></a>).</p>
 
 <p>
@@ -356,7 +356,7 @@ margin-left: 0em;
 
 <p>By Goldbach’s conjecture once more, there are prime numbers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{2}'</annotation></semantics></math> such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo><mo>=</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">2(n+1) = p_{1}' + p_{2}'</annotation></semantics></math>. As above, at least one of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{2}'</annotation></semantics></math> must be greater than or equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math>. Without loss of generality, suppose that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> has this property.</p>
 
-<p>Then since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math> is not prime, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n+1 \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>, and thus that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>.</p>
+<p>Then, since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math> is not prime, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n+1 \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>, and thus that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>.</p>
 
 <p>Now, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> is not equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">2n+1</annotation></semantics></math>, for this would imply that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">p_{2}'=1</annotation></semantics></math>, which is impossible. Moreover, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> is not equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">2n</annotation></semantics></math>, since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">2n</annotation></semantics></math> is not prime. We deduce that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">p_{1}' \lt 2n</annotation></semantics></math>, as required.</p>
 
@@ -371,14 +371,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 29, 2018 at 10:04:03.
+  Last revised on September 30, 2018 at 16:59:20.
   See the <a href="https://ncatlab.org/nlab/history/Bertrand&#39;s postulate" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bertrand%27s+postulate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Bertrand%27s+postulate" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bertrand%27s+postulate/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bertrand%27s+postulate" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bertrand%27s+postulate" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bertrand&#39;s postulate/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
