--- a/pages/19734.html
+++ b/pages/19734.html
@@ -316,23 +316,25 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#section_Introduction'>Introduction</a></li>
-<li><a href='#section_Bertrand's_postulate'>Bertrand's postulate</a></li>
-<li><a href='#section_Proof_given_Goldbach's_conjecture'>Proof given Goldbach's conjecture</a></li>
+<li><a href='#section_Bertrand’s_postulate'>Bertrand’s postulate</a></li>
+<li><a href='#section_Proof_given_Goldbach’s_conjecture'>Proof given Goldbach’s conjecture</a></li>
 <li><a href='#section_References'>References</a></li>
 </ul>
 </div>
 
-<h2 id="section_Introduction">Introduction</h2>
+
+<p><h2 id='section_Introduction'>Introduction</h2></p>
+
 <p><em>Bertrand’s postulate</em>, first proven by analytic methods by Chebyshev in 1852, is one of the few simple facts providing precise bounds on the occurrence of primes.</p>
-<h2 id="section_Bertrand's_postulate">Bertrand's postulate</h2>
+
+<p><h2 id='section_Bertrand’s_postulate'>Bertrand’s postulate</h2></p>
+
 <p>Given an integer <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>i</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">i \geq 1</annotation></semantics></math>, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mi>i</mi></msub></mrow><annotation encoding="application/x-tex">p_{i}</annotation></semantics></math> denote the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>i</mi> <mi>th</mi></msup></mrow><annotation encoding="application/x-tex">i^{th}</annotation></semantics></math> prime. <em>Bertrand’s postulate</em> is the following.</p>
 
 <p>
 <div class='num_theorem' id='TheoremBertrandsPostulate'>
 <h6>Theorem</h6>
 <p>For any integer <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n \geq 1</annotation></semantics></math>, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub><mo>&lt;</mo><mn>2</mn><msub><mi>p</mi> <mi>n</mi></msub></mrow><annotation encoding="application/x-tex">p_{n+1} \lt 2p_{n}</annotation></semantics></math>.</p>
-
-<p></p>
 </div>
 </p>
 
@@ -340,11 +342,11 @@ margin-left: 0em;
 <div class='num_remark' id='RemarkAlternativeFormulations'>
 <h6>Remark</h6>
 <p>There are a number of equivalent formulations of Theorem <a class="maruku-ref" href="#TheoremBertrandsPostulate"></a>. One is that, for any integer <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&gt;</mo><mn>3</mn></mrow><annotation encoding="application/x-tex">n \gt 3</annotation></semantics></math>, there is a prime <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&lt;</mo><mi>p</mi><mo>&lt;</mo><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">n \lt p \lt 2n</annotation></semantics></math>.</p>
-
-<p></p>
 </div>
 </p>
-<h2 id="section_Proof_given_Goldbach's_conjecture">Proof given Goldbach's conjecture</h2>
+
+<p><h2 id='section_Proof_given_Goldbach’s_conjecture'>Proof given Goldbach’s conjecture</h2></p>
+
 <p>Around 2005, it was noticed by Henry J. Ricardo and Yoshihiro Tanaka that Bertrand’s postulate follows from the Goldbach conjecture. We record the proof (of the formulation in Remark <a class="maruku-ref" href="#RemarkAlternativeFormulations"></a>).</p>
 
 <p>
@@ -356,14 +358,16 @@ margin-left: 0em;
 
 <p>By Goldbach’s conjecture once more, there are prime numbers <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{2}'</annotation></semantics></math> such that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo><mo>=</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo lspace="verythinmathspace" rspace="0em">+</mo><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">2(n+1) = p_{1}' + p_{2}'</annotation></semantics></math>. As above, at least one of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{2}'</annotation></semantics></math> must be greater than or equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math>. Without loss of generality, suppose that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> has this property.</p>
 
-<p>Then, since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math> is not prime, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n+1 \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>, and thus that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>.</p>
+<p>Then since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math> is not prime, we have that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n+1 \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>, and thus that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>&lt;</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>+</mo><mn>1</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">n \lt p_{1}' \lt 2(n+1)</annotation></semantics></math>.</p>
 
 <p>Now, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> is not equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">2n+1</annotation></semantics></math>, for this would imply that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>2</mn></msub><mo>′</mo><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">p_{2}'=1</annotation></semantics></math>, which is impossible. Moreover, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo></mrow><annotation encoding="application/x-tex">p_{1}'</annotation></semantics></math> is not equal to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">2n</annotation></semantics></math>, since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">2n</annotation></semantics></math> is not prime. We deduce that <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub><mo>′</mo><mo>&lt;</mo><mn>2</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">p_{1}' \lt 2n</annotation></semantics></math>, as required.</p>
 
 <p></p>
 </div>
 </p>
-<h2 id="section_References">References</h2>
+
+<p><h2 id='section_References'>References</h2></p>
+
 <p>Henry J. Ricardo, <em>Goldbach’s conjecture implies Bertrand’s postulate, Amer. Math. Monthly, 112, pg. 492, 2005</em></p>
 </body></html>
 
@@ -371,7 +375,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 16:59:20.
+  Last revised on September 30, 2018 at 17:38:53.
   See the <a href="https://ncatlab.org/nlab/history/Bertrand&#39;s postulate" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
