--- a/pages/1563.html
+++ b/pages/1563.html
@@ -878,7 +878,9 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Barr%27s+theorem">Barr's theorem</a></p>
 </li>
 </ul><div>
-<p><a href="/nlab/edit/topos+theory+-+contents">Edit this sidebar</a></p>
+<p>
+  <a href="/nlab/edit/topos+theory+-+contents">Edit this sidebar</a>
+</p>
 </div></div>
 
 <h4 id="synthetic_differential_geometry">Synthetic differential geometry</h4>
@@ -2261,14 +2263,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 23, 2018 at 10:24:26.
+  Last revised on September 30, 2018 at 17:23:49.
   See the <a href="https://ncatlab.org/nlab/history/William Lawvere" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/William+Lawvere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/William+Lawvere/68" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(68 revisions)</span> | <a href="/nlab/show/diff/William+Lawvere" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/William+Lawvere" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/William+Lawvere" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/William+Lawvere/69" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(69 revisions)</span> | <a href="/nlab/show/diff/William+Lawvere" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/William+Lawvere" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/William Lawvere/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
