--- a/pages/6489.html
+++ b/pages/6489.html
@@ -1051,7 +1051,7 @@ margin-left: 0em;
 </li>
 
 <li id="Douglas02">
-<p><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a><em>Dirichlet branes, homological mirror symmetry, and stability</em>, Proc. ICM, Vol. III (Beijing, 2002), 395–408, Higher Ed. Press, Beijing, 2002</p>
+<p><a class="existingWikiWord" href="/nlab/show/Michael+Douglas">Michael Douglas</a>, <em>Dirichlet branes, homological mirror symmetry, and stability</em>, Proc. ICM, Vol. III (Beijing, 2002), 395–408, Higher Ed. Press, Beijing, 2002</p>
 </li>
 
 <li id="Aspinwall04">
@@ -1072,14 +1072,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 14:57:58.
+  Last revised on October  1, 2018 at 01:00:26.
   See the <a href="https://ncatlab.org/nlab/history/Bridgeland stability condition" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/17" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(17 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bridgeland+stability+condition" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bridgeland+stability+condition/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Bridgeland+stability+condition" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bridgeland+stability+condition" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Bridgeland stability condition/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
