--- a/pages/19735.html
+++ b/pages/19735.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -483,11 +483,13 @@ margin-left: 0em;
 <p>graphics grabbed from <a href="#Qiu15">Qiu 15</a></p>
 </blockquote>
 
+<p>See e.g. <a href="#Qiu15">Qiu 15, Def. 2.1</a></p>
+
 <h2 id="properties">Properties</h2>
 
 <h3 id="characterization_as_finitetype_quivers">Characterization as finite-type quivers</h3>
 
-<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><span class="newWikiWord">Dynkin quivers<a href="/nlab/new/Dynkin+quivers">?</a></span></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><a class="existingWikiWord" href="/nlab/show/Dynkin+quivers">Dynkin quivers</a></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a></p>
 
 <p>Moreover, the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> in this case are <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the positive <a class="existingWikiWord" href="/nlab/show/root+%28in+representation+theory%29">roots</a> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>.</p>
 
@@ -503,11 +505,11 @@ margin-left: 0em;
 
 <ul>
 <li id="Qiu15">
-<p><span class="newWikiWord">Yu Qiu<a href="/nlab/new/Yu+Qiu">?</a></span>, Def. 2.1 <em>Stability conditions and quantum dilogarithm identities for Dynkin quivers</em>, Adv. Math., 269 (2015), pp 220-264 (<a href="https://arxiv.org/abs/1111.1010">arXiv:1111.1010</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Yu+Qiu">Yu Qiu</a>, <em>Stability conditions and quantum dilogarithm identities for Dynkin quivers</em>, Adv. Math., 269 (2015), pp 220-264 (<a href="https://arxiv.org/abs/1111.1010">arXiv:1111.1010</a>)</p>
 </li>
 
 <li>
-<p><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <span class="newWikiWord">Yu Qiu<a href="/nlab/new/Yu+Qiu">?</a></span>, <span class="newWikiWord">Tom Sutherland<a href="/nlab/new/Tom+Sutherland">?</a></span>, <em>Stability conditions and the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">A_2</annotation></semantics></math> quiver</em> (<a href="https://arxiv.org/abs/1406.2566">arXiv:1406.2566</a>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Tom+Bridgeland">Tom Bridgeland</a>, <a class="existingWikiWord" href="/nlab/show/Yu+Qiu">Yu Qiu</a>, Tom Sutherland, <em>Stability conditions and the <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">A_2</annotation></semantics></math> quiver</em> (<a href="https://arxiv.org/abs/1406.2566">arXiv:1406.2566</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -516,14 +518,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on September 30, 2018 at 06:12:39.
+  Last revised on October  1, 2018 at 06:56:02.
   See the <a href="https://ncatlab.org/nlab/history/Dynkin quiver" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dynkin+quiver" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Dynkin+quiver" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dynkin+quiver/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Dynkin+quiver" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dynkin+quiver" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Dynkin quiver/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
