--- a/pages/9663.html
+++ b/pages/9663.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -472,7 +472,7 @@ margin-left: 0em;
 
 <h2 id="statement">Statement</h2>
 
-<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><span class="newWikiWord">Dynkin quivers<a href="/nlab/new/Dynkin+quivers">?</a></span></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a></p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected <a class="existingWikiWord" href="/nlab/show/quivers">quivers</a> with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <a class="existingWikiWord" href="/nlab/show/algebraically+closed+field">algebraically closed field</a> are precisely the <em><a class="existingWikiWord" href="/nlab/show/Dynkin+quivers">Dynkin quivers</a></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a></p>
 
 <p>Moreover, the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> in this case are <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the positive <a class="existingWikiWord" href="/nlab/show/root+%28in+representation+theory%29">roots</a> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>.</p>
 
@@ -484,7 +484,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><span class="newWikiWord">Dynkin quiver<a href="/nlab/new/Dynkin+quiver">?</a></span></p>
+<p><a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a></p>
 </li>
 </ul>
 
@@ -493,7 +493,7 @@ margin-left: 0em;
 <p>The result is due to</p>
 
 <ul>
-<li id="Gabriel72"><a class="existingWikiWord" href="/nlab/show/Peter+Gabriel">Peter Gabriel</a>, <em>Unzerlegbare Darstellungen. I</em>, Manuscripta Mathematica 6: 71–103, (1972)</li>
+<li id="Gabriel72"><a class="existingWikiWord" href="/nlab/show/Peter+Gabriel">Peter Gabriel</a>, <em>Unzerlegbare Darstellungen. I</em>, Manuscripta Mathematica 6: 71–103, (1972) (<a href="https://link.springer.com/article/10.1007/BF01298413">doi:10.1007/BF01298413</a>)</li>
 </ul>
 
 <p>Lecture notes include</p>
@@ -513,14 +513,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 05:54:18.
+  Last revised on October  1, 2018 at 06:56:55.
   See the <a href="https://ncatlab.org/nlab/history/Gabriel&#39;s theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Gabriel%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel%27s+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Gabriel%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Gabriel%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Gabriel%27s+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Gabriel%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Gabriel%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Gabriel&#39;s theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
