--- a/pages/189.html
+++ b/pages/189.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4893/#Item_10" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4893/#Item_14" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -464,7 +464,7 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#idea'>Idea</a></li>
+<li><a href='#Idea'>Idea</a></li>
 <li><a href='#definitions'>Definitions</a></li>
 <ul>
 <li><a href='#slick_definition'>Slick definition</a></li>
@@ -483,17 +483,25 @@ margin-left: 0em;
 </ul>
 </div>
 
-<h2 id="idea">Idea</h2>
+<h2 id="Idea">Idea</h2>
 
-<p>A quiver is a collection of edges which may stretch between (ordered) pairs of “points”, called <em>vertices</em>.</p>
+<p>A <em>quiver</em> (<a href="#Gabriel72">Gabriel 72</a>) is a collection of <a class="existingWikiWord" href="/nlab/show/edges">edges</a> which may stretch between (ordered) <a class="existingWikiWord" href="/nlab/show/pairs">pairs</a> of “points”, called <em><a class="existingWikiWord" href="/nlab/show/vertices">vertices</a></em>. Hence a quiver is a kind of <a class="existingWikiWord" href="/nlab/show/graph">graph</a>, often called a <a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a> (or <a class="existingWikiWord" href="/nlab/show/digraph">digraph</a>) by <a class="existingWikiWord" href="/nlab/show/category+theory">category theorists</a>.</p>
 
-<p>A quiver is like a <a class="existingWikiWord" href="/nlab/show/category">category</a> with units and composition forgotten. Indeed, a <a class="existingWikiWord" href="/nlab/show/category">category</a> is a quiver with extra structure. To formalize this idea, we say there is a <a class="existingWikiWord" href="/nlab/show/forgetful+functor">forgetful functor</a></p>
+<p>The term “quiver” (German: <em>Köcher</em>) for a <em><a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a></em> is due to <a href="#Gabriel72">Gabriel 72</a>, where it says on the first page:</p>
+
+<blockquote>
+<p>For such a 4-tuple <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">[</mo></mrow><annotation encoding="application/x-tex">\big[</annotation></semantics></math> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>V</mi><munderover><mrow></mrow><munder><mo>⟶</mo><mi>t</mi></munder><mover><mo>⟶</mo><mi>s</mi></mover></munderover><mi>E</mi></mrow><annotation encoding="application/x-tex">V \underoverset{\underset{t}{\longrightarrow}}{\overset{s}{\longrightarrow}}{} E</annotation></semantics></math> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo maxsize="1.2em" minsize="1.2em">]</mo></mrow><annotation encoding="application/x-tex">\big]</annotation></semantics></math> we propose the term <em>quiver</em>, and not <em>graph</em>, since there are already too many notions attached to the latter word.</p>
+</blockquote>
+
+<p>While therefore, as concepts in themselves, <em>quiver</em> and <em>directed graph</em> are just the same, using the term <em>quiver</em> serves to indicate certain constructions that one is interested in (a <em><a class="existingWikiWord" href="/nlab/show/concept+with+an+attitude">concept with an attitude</a></em>), notably the corresponding <em><a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a></em> which much of the theory revolves around. The key result here is <em><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a></em> from the same article <a href="#Gabriel72">Gabriel 72</a> that introduced the terminology <em>quiver</em>.</p>
+
+<p>On the other hand, beware that in <a class="existingWikiWord" href="/nlab/show/graph+theory">graph theory</a>, the term “<a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a>” is often taken to mean that there is at most one edge from one vertex to another. To emphasize that a quiver allows more edges between vertices one may speak of <em>directed <a class="existingWikiWord" href="/nlab/show/pseudographs">pseudographs</a></em>. See at <em><a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a></em> for more.</p>
+
+<p>From yet another perspective, quivers/directed pseudographs are also like <a class="existingWikiWord" href="/nlab/show/small+categories">small categories</a> with <a class="existingWikiWord" href="/nlab/show/identity+morphisms">identity morphisms</a> and <a class="existingWikiWord" href="/nlab/show/composition">composition</a> forgotten. Conversely, a <a class="existingWikiWord" href="/nlab/show/small+category">small category</a> may be regarded as a quiver/directed pseudograph equipped with <a class="existingWikiWord" href="/nlab/show/extra+structure">extra structure</a>. Formally this is witnessed by a <a class="existingWikiWord" href="/nlab/show/forgetful+functor">forgetful functor</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>U</mi><mo lspace="verythinmathspace">:</mo><mi>Cat</mi><mo>→</mo><mi>Quiv</mi></mrow><annotation encoding="application/x-tex">U\colon Cat \to Quiv</annotation></semantics></math></div>
 <p>where <a class="existingWikiWord" href="/nlab/show/Quiv">Quiv</a> is the category of quivers and <a class="existingWikiWord" href="/nlab/show/Cat">Cat</a> is the category of (<a class="existingWikiWord" href="/nlab/show/small+category">small</a> <a class="existingWikiWord" href="/nlab/show/strict+category">strict</a>) categories. Moreover, this forgetful functor has a <a class="existingWikiWord" href="/nlab/show/left+adjoint">left adjoint</a></p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>F</mi><mo lspace="verythinmathspace">:</mo><mi>Quiv</mi><mo>→</mo><mi>Cat</mi></mrow><annotation encoding="application/x-tex">F\colon Quiv \to Cat </annotation></semantics></math></div>
 <p>sending each quiver to the <a class="existingWikiWord" href="/nlab/show/free+category">free category</a> on that quiver.</p>
-
-<p>A quiver is a kind of <a class="existingWikiWord" href="/nlab/show/graph">graph</a> and is often called a <a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a> (or <a class="existingWikiWord" href="/nlab/show/digraph">digraph</a>) by category theorists. Beware that in <a class="existingWikiWord" href="/nlab/show/graph+theory">graph theory</a>, the term “directed graph” is often taken to mean that there is at most one edge from one vertex to another, for emphasis that a quiver allows more edges between vertices one also speaks of <em>directed <a class="existingWikiWord" href="/nlab/show/pseudographs">pseudographs</a></em>. See at <em><a class="existingWikiWord" href="/nlab/show/directed+graph">directed graph</a></em> for more.</p>
 
 <h2 id="definitions">Definitions</h2>
 
@@ -607,7 +615,7 @@ margin-left: 0em;
 
 <h3 id="Classification">Classification</h3>
 
-<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> says that connected quivers with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <span class="newWikiWord">algebraically close field<a href="/nlab/new/algebraically+close+field">?</a></span>are precisely the <em><span class="newWikiWord">Dynkin quivers<a href="/nlab/new/Dynkin+quivers">?</a></span></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a>, and that the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> are in <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the positive <span class="newWikiWord">root (in representation theory)roots<a href="/nlab/new/root+%28in+representation+theory%29roots">?</a></span> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the Dynkin diagram. (<a href="#Gabriel72">Gabriel 72</a>).</p>
+<p><a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a> (<a href="#Gabriel72">Gabriel 72</a>) says that connected quivers with a <a class="existingWikiWord" href="/nlab/show/finite+number">finite number</a> of <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> over an <span class="newWikiWord">algebraically close field<a href="/nlab/new/algebraically+close+field">?</a></span>are precisely the <em><a class="existingWikiWord" href="/nlab/show/Dynkin+quivers">Dynkin quivers</a></em>: those whose underlying <a class="existingWikiWord" href="/nlab/show/undirected+graph">undirected graph</a> is a <a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a> in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE series</a>, and that the <a class="existingWikiWord" href="/nlab/show/indecomposable+object">indecomposable</a> <a class="existingWikiWord" href="/nlab/show/quiver+representations">quiver representations</a> are in <a class="existingWikiWord" href="/nlab/show/bijection">bijection</a> with the positive <span class="newWikiWord">root (in representation theory)roots<a href="/nlab/new/root+%28in+representation+theory%29roots">?</a></span> in the <a class="existingWikiWord" href="/nlab/show/root+system">root system</a> of the Dynkin diagram. (<a href="#Gabriel72">Gabriel 72</a>).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
@@ -616,6 +624,12 @@ margin-left: 0em;
 </ul>
 
 <h2 id="references">References</h2>
+
+<p>The concept of quiver in the context of <span class="newWikiWord">quiver represententations<a href="/nlab/new/quiver+represententations">?</a></span> (and their classification in <a class="existingWikiWord" href="/nlab/show/Gabriel%27s+theorem">Gabriel's theorem</a>) originates with</p>
+
+<ul>
+<li id="Gabriel72"><a class="existingWikiWord" href="/nlab/show/Peter+Gabriel">Peter Gabriel</a>, <em>Unzerlegbare Darstellungen. I</em>, Manuscripta Mathematica 6: 71–103, (1972) (<a href="https://link.springer.com/article/10.1007/BF01298413">doi:10.1007/BF01298413</a>, <a href="http://www.ams.org/mathscinet-getitem?mr=332887">MR332887</a> <a href="http://dx.doi.org/10.1007/BF01298413">doi</a>)</li>
+</ul>
 
 <p>Some general-purpose references include</p>
 
@@ -631,12 +645,6 @@ margin-left: 0em;
 <li>
 <p>Alistair Savage, <em>Finite-dimensional algebras and quivers</em> (<a href="http://www.arxiv.org/abs/math/0505082">arXiv:math/0505082</a>), <em>Encyclopedia of Mathematical Physics</em>, eds. J.-P. Françoise, G.L. Naber and Tsou S.T., Oxford, Elsevier, 2006, volume 2, pp. 313-320.</p>
 </li>
-</ul>
-
-<p>Classification results for quivers appeared in</p>
-
-<ul>
-<li id="Gabriel72"><a class="existingWikiWord" href="/nlab/show/Peter+Gabriel">Peter Gabriel</a>, <em>Unzerlegbare Darstellungen. I</em>, Manuscripta Mathematica 6: 71–103, (1972) <a href="http://www.ams.org/mathscinet-getitem?mr=332887">MR332887</a> <a href="http://dx.doi.org/10.1007/BF01298413">doi</a></li>
 </ul>
 
 <p>Quivers (referred to as <em>directed pseudographs</em>) were a tool in parts of the work of Ringel and Youngs in the second half the twentieth century to prove Heawood’s formula for every finite genus, cf. e.g. Fig. 2.3 the monograph</p>
@@ -672,14 +680,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 30, 2018 at 05:53:41.
+  Last revised on October  1, 2018 at 07:44:44.
   See the <a href="https://ncatlab.org/nlab/history/quiver" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quiver" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/quiver" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quiver" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quiver/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/quiver" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quiver" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quiver/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
